<resources>
    <string name="app_name">My Form</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="cell">Cell</string>
    <string name="message">Message</string>
    <string name="press_me">Press Me!</string>
    <string name="open_new_page">Open new page</string>
    <string name="about_us">About Us</string>
    <string name="call_us">Call Us</string>
    <string name="email_us">Email Us</string>
    <string name="exit">Exit</string>
    <string name="credits">Credits</string>
    <string name="call">Call</string>
    <string name="visit_profile">Visit Profile</string>
    <string-array name="departments">
        <item>I.T</item>
        <item>Sales Marketing</item>
        <item>H.R.</item>
        <item>Legal</item>
        <item>Communication</item>
        <item>Others</item>
    </string-array>
    <string-array name="states">
        <item>Selangor</item>
        <item>Sabah</item>
        <item>Sarawak</item>
        <item>Kelantan</item>
        <item>Kedah</item>
        <item>Perlis</item>
        <item>Pahang</item>
        <item>Perak</item>
        <item>Pulau Pinang</item>
        <item>Johor</item>
        <item>Melaka</item>
        <item>Wilayah Persekutuan</item>
        <item>Terengganu</item>
        <item>Negeri Sembilan</item>
    </string-array>
</resources>
